--- a/server/package.json
+++ b/server/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "youtube-captions-scraper": "^2.0.0"
+  }
 }
