--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,14 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.1",
     "@googleapis/forms": "^2.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^111.0.0",
+    "morgan": "^1.10.0",
     "youtube-captions-scraper": "^2.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
