--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
     "googleapis": "^111.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "youtube-captions-scraper": "^2.0.0"
