--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "type":"module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +13,7 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.1",
     "@googleapis/forms": "^2.0.0",
+    "chatgpt": "^4.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
