--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-draggable": "^4.4.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
