--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "type":"module",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,7 @@
     "@googleapis/forms": "^2.0.0",
     "chatgpt": "^4.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
     "googleapis": "^111.0.0",
@@ -22,8 +23,5 @@
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "youtube-captions-scraper": "^2.0.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.3"
   }
 }
